Ensure that the categories bar works on smaller screens.

--- a/caravel/static/default.css
+++ b/caravel/static/default.css
@@ -60,6 +60,21 @@ a.no-underline {
     margin-top: 0.5em;
 }
 
+@media (min-width: 992px) {
+    #categories {
+        font-size: 0.9em;
+    }
+    
+    #categories a {
+        padding: 5px;
+    }
+}
+
+#categories a {
+    color: #000;
+    text-decoration: none;
+}
+
 /* For show page */
 
 
